[package]
name = "request_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
error-chain = "0.12.4"
reqwest = { version = "0.12.4"  , features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"]}
tokio = { version = "1.38.0", features = ["full"] }


[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
